Telegram icon in footer

--- a/src/hugo.yaml
+++ b/src/hugo.yaml
@@ -11,3 +11,5 @@ params:
   phone:          +7 (911) 082-56-00
   vk:             https://vk.com/a.r.t.nouveau
   instagram:      https://www.instagram.com/a.r.t.nouveau
+  telegram:       https://t.me/artnouveaumosaic
+  ozon:           https://www.ozon.ru/category/almaznye-mozaiki-13563/art-nuvo-100957859/
