--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-        HUGO_VERSION: 0.119.0
+        HUGO_VERSION: 0.122.0
       
     steps:
       - name: Install Hugo CLI
@@ -41,12 +41,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          submodules: true
-          fetch-depth: 0
+            submodules: recursive
 
       - name: Setup Pages
         id: pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v4
 
       - name: Build with Hugo
         env:
@@ -54,10 +53,13 @@ jobs:
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
         run: |
-          hugo --source src --minify --baseURL "${{ steps.pages.outputs.base_url }}/"
+          hugo \
+            --source src \
+            --minify \
+            --baseURL "${{ steps.pages.outputs.base_url }}/"
             
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./src/.public
 
@@ -73,4 +75,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
