--- a/.pages.yml
+++ b/.pages.yml
@@ -1,3 +1,13 @@
 media: 
   input: assets/uploads
   output: assets/img
+
+content:
+  - name: courses
+    label: Courses
+    path: src/content/courses
+    type: collection
+    fields: 
+      - name: title
+        label: Title
+        type: string
